[project]
name = "fairscape-cli"
version = "0.1.9a2"
description = "CLI tool for B2AI metadata validation and ROCrate creation"
readme = "README.md"
authors = [
        { name = "Max Levinson",    email = "mal8ch@virginia.edu"},
        { name = "Sadnan Al Manir", email = "sadnanalmanir@gmail.com"},
        { name = "Tim Clark",       email = "twc8q@virginia.edu"}
]
license = {file= "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"]
keywords = ["fairscape", "reproducibility", "fair", "b2ai"]
dependencies = [
        "click>=8.1.7",
        "pydantic>=2.5.1",
        "prettytable>=3.9.0",
        "imageio>=2.33.0",
        "jsonschema>=4.20.0",
        "pandas>=2.1.4",
        "pytest>=7.4.3",
        "sqids>=0.4.1",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/fairscape/fairscape-cli"

[project.scripts]
fairscape-cli = "fairscape_cli.__main__:cli"
