[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fairscape-cli"
version = "1.1.17"
description = "A utility for packaging objects and validating metadata for FAIRSCAPE"
readme = "README.md"
requires-python = ">=3.8"
authors = [
        { name = "Max Levinson",    email = "mal8ch@virginia.edu"},
        { name = "Justin Niestroy", email = "jniestroy@gmail.com"},
        { name = "Sadnan Al Manir", email = "sadnanalmanir@gmail.com"},
        { name = "Tim Clark",       email = "twc8q@virginia.edu"}
]
license = {file= "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",  
    "Operating System :: OS Independent",
    "Topic :: File Formats :: JSON",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules"      
]
keywords = ["fairscape", "reproducibility", "FAIR", "B2AI", "CLI", "RO-Crate"]
dependencies = [
        "click>=8.1.7",
        "pydantic>=2.5.1",
        "prettytable>=3.9.0",
        "jsonschema>=4.20.0",
        "sqids>=0.4.1",
        "fairscape-models>=1.0.26",
        "pyyaml",
        "h5py",
        "frictionless>=5.0,<6.0",
        "beautifulsoup4",
        "pandas",
        "rdflib",
        "mongomock",
        "huggingface_hub>=0.20.0",
        "pyarrow>=17.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"fairscape_cli" = [
    "datasheet_builder/templates/**/*", 
    "datasheet_builder/templates/**/*.html",
    "entailments/*.xml"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/fairscape/fairscape-cli"
Documentation = "https://fairscape.github.io/fairscape-cli/"
Repository = "https://github.com/fairscape/fairscape-cli.git"
Issues = "https://github.com/fairscape/fairscape-cli/issues"
Changelog = "https://github.com/fairscape/fairscape-cli/blob/main/CHANGELOG.md"
Citation = "https://github.com/fairscape/fairscape-cli/blob/main/CITATION.cff"

[project.scripts]
fairscape-cli = "fairscape_cli.__main__:cli"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
